--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.wipro</groupId>
     <artifactId>maven-project</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
  
     <name>maven-project</name>
     <url>http://www.example.com</url>
